--- a/todo.css
+++ b/todo.css
@@ -152,3 +152,22 @@ main {
 .task .actions .delete {
 	color: crimson;
 }
+
+footer{
+	width: 50%;
+	margin: 0 auto;
+	text-align: center;
+	padding: 5px, 15px;
+	background-color: var(--darkest);
+	border-radius: 5px;
+	color: var(--grey);
+	font-size: 20px;
+	font-weight: 500;
+}
+
+
+
+
+
+
+
